[package]
name = "disquiet"
version = "0.1.0"
authors = ["weqqr <weqqr@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
crossbeam-deque = "0.7.3"
crossbeam-utils = "0.7.2"
png = "0.16.0"
thiserror = "1.0.11"
rand = { version = "0.7.3", default-features=false }
rand_pcg = "0.2.1"
rand_distr = "0.2.2"
wide = "0.6.4"

[profile.release]
debug = true
